--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>baowei-kfq2</title>
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1931343_jqs42nk4lis.css">
+<!--    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">-->
+    <link rel="stylesheet" href="./static/font/iconfont.css">
+    <!-- <script src=""><script> -->
   </head>
   <body>
     <div id="app"></div>
