--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>baowei-kfq2</title>
-<!--    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">-->
-    <link rel="stylesheet" href="./static/font/iconfont.css">
-    <!-- <script src=""><script> -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
+    />
+    <!-- <link rel="stylesheet" href="./static/font/iconfont.css" /> -->
+    <link
+      rel="stylesheet"
+      href="http://at.alicdn.com/t/font_1931343_4k50cgh2e15.css"
+    />
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
