--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>baowei-kfq2</title>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
-    />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css" /> -->
     <!-- <link rel="stylesheet" href="./static/font/iconfont.css" /> -->
-    <link
-      rel="stylesheet"
-      href="http://at.alicdn.com/t/font_1931343_vl6jlxkdw2.css"
-    />
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-  </head>
-  <body>
+    <!-- <link rel="stylesheet" href="http://at.alicdn.com/t/font_1931343_vl6jlxkdw2.css" /> -->
+    <script>
+        window.BaseApi = 'http://localhost:4000'
+        window.config = {
+            // BaseApi: "http://localhost:4000",
+            applicationInterfaceApi: "http://localhost:4000", //二级首页配置--应用接口公共api
+        }
+    </script>
+</head>
+
+<body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
