--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
     <!-- <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css" /> -->
     <!-- <link rel="stylesheet" href="./static/font/iconfont.css" /> -->
     <!-- <link rel="stylesheet" href="http://at.alicdn.com/t/font_1931343_vl6jlxkdw2.css" /> -->
-    <script>
-        window.BaseApi = 'http://localhost:4000'
-        window.config = {
-            // BaseApi: "http://localhost:4000",
-            applicationInterfaceApi: "http://localhost:4000", //二级首页配置--应用接口公共api
-        }
-    </script>
+    <script src="static/js/config.js"></script>
 </head>
 
 <body>
